# amadeus

./: .gitmodules  .rustfmt.toml  .travis.yml  Cargo.toml  Changelog.md  LICENSE-MIT  README.md  azure-pipelines.yml  build.rs
.circleci/: config.yml
.github/: dependabot.yml
amadeus-aws/: Cargo.toml  README.md
amadeus-aws/src/: cloudfront.rs  file.rs  lib.rs
amadeus-commoncrawl/: Cargo.toml  README.md
amadeus-commoncrawl/src/: commoncrawl.rs  lib.rs  parser.rs
amadeus-core/: Cargo.toml  README.md
amadeus-core/src/: async_drop.rs  dist_iter.rs  dist_pipe.rs  dist_sink.rs  dist_stream.rs  file.rs  into_dist_iter.rs  into_dist_stream.rs  into_par_stream.rs  lib.rs  misc_serde.rs  par_pipe.rs  par_sink.rs  par_stream.rs  pipe.rs  pool.rs  sink.rs  source.rs  util.rs
amadeus-core/src/dist_iter/: all.rs  any.rs  chain.rs  cloned.rs  collect.rs  combine.rs  count.rs  filter.rs  flat_map.rs  fold.rs  for_each.rs  identity.rs  inspect.rs  map.rs  max.rs  sample.rs  sum.rs  sum_type.rs  tuple.rs  update.rs
amadeus-core/src/dist_sink/: all.rs  any.rs  collect.rs  combine.rs  combiner.rs  count.rs  fold.rs  folder.rs  for_each.rs  max.rs  sample.rs  sum.rs  tuple.rs
amadeus-core/src/dist_stream/: all.rs  any.rs  chain.rs  cloned.rs  collect.rs  combine.rs  count.rs  filter.rs  flat_map.rs  fold.rs  for_each.rs  identity.rs  inspect.rs  map.rs  max.rs  sample.rs  sum.rs  sum_type.rs  tuple.rs  update.rs
amadeus-core/src/file/: local.rs
amadeus-core/src/into_dist_iter/: collections.rs  iterator.rs  slice.rs
amadeus-core/src/into_dist_stream/: collections.rs  iterator.rs  slice.rs
amadeus-core/src/into_par_stream/: collections.rs  iterator.rs  slice.rs
amadeus-core/src/par_sink/: all.rs  any.rs  collect.rs  combine.rs  combiner.rs  count.rs  fold.rs  folder.rs  for_each.rs  fork.rs  group_by.rs  histogram.rs  max.rs  mean.rs  pipe.rs  sample.rs  stats.rs  stddev.rs  sum.rs  tuple.rs
amadeus-core/src/par_stream/: chain.rs  cloned.rs  filter.rs  filter_map_sync.rs  flat_map.rs  flat_map_sync.rs  identity.rs  inspect.rs  join.rs  map.rs  map_sync.rs  sum_type.rs  update.rs
amadeus-core/src/pipe/: filter.rs  filter_map_sync.rs  flat_map.rs  flat_map_sync.rs  flatten.rs  map.rs
amadeus-derive/: Cargo.toml  README.md
amadeus-derive/src/: lib.rs
amadeus-ml/: Cargo.toml  NOTICE.txt
amadeus-ml/benches/: benchmark.rs
amadeus-ml/src/: fast_approx.rs  lib.rs  nodes.rs  numerics.rs
amadeus-ml/src/nn/: losses.rs  lstm.rs  mod.rs
amadeus-ml/src/optim/: adagrad.rs  adam.rs  barrier.rs  mod.rs  sgd.rs
amadeus-parquet/: Cargo.toml  README.md  generate.sh
amadeus-parquet-derive/: Cargo.toml  README.md
amadeus-parquet-derive/src/: lib.rs
amadeus-parquet/amadeus-parquet-derive/: Cargo.toml  README.md
amadeus-parquet/amadeus-parquet-derive/src/: lib.rs
amadeus-parquet/benches/: codec.rs  common.rs  decoding.rs  encoding.rs  reader.rs
amadeus-parquet/src/: README.md  impls.rs  lib.rs
amadeus-parquet/src/internal/: Cargo.toml  NOTICE.txt  basic.rs  build.rs  compression.rs  data_type.rs  errors.rs  format.rs  mod.rs
amadeus-parquet/src/internal/benches/: codec.rs  common.rs  decoding.rs
amadeus-parquet/src/internal/column/: mod.rs  page.rs  reader.rs  writer.rs
amadeus-parquet/src/internal/encodings/: decoding.rs  encoding.rs  levels.rs  rle.rs
amadeus-parquet/src/internal/file/: metadata.rs  mod.rs  properties.rs  reader.rs  statistics.rs  writer.rs
amadeus-parquet/src/internal/parchet-derive/: Cargo.toml  README.md
amadeus-parquet/src/internal/record/: display.rs  impls.rs  mod.rs  predicates.rs  reader.rs  schemas.rs  triplet.rs  types.rs
amadeus-parquet/src/internal/record/types/: array.rs  boxed.rs  decimal.rs  group.rs  list.rs  map.rs  numbers.rs  option.rs  root.rs  time.rs  tuple.rs  value.rs  value_required.rs
amadeus-parquet/src/internal/schema/: mod.rs  parser.rs  printer.rs  types.rs  visitor.rs
amadeus-parquet/src/internal/src/: data_type.rs
amadeus-parquet/src/internal/src/column/: mod.rs  page.rs  reader.rs  writer.rs
amadeus-parquet/src/internal/src/file/: properties.rs  statistics.rs  writer.rs
amadeus-parquet/src/internal/src/record/: display.rs  mod.rs  reader.rs  types.rs
amadeus-parquet/src/internal/src/record/types/: decimal.rs  group.rs  list.rs  value_required.rs
amadeus-parquet/src/internal/src/schema/: printer.rs  types.rs
amadeus-parquet/src/internal/src/util/test_common/: file_util.rs  mod.rs  page_util.rs
amadeus-parquet/src/internal/tests/: derive.rs
amadeus-parquet/src/internal/util/: bit_util.rs  hash_util.rs  io.rs  memory.rs
amadeus-parquet/src/internal/util/test_common/: benches.rs  file_util.rs  mod.rs  page_util.rs  rand_gen.rs
amadeus-parquet/tests/: derive.rs
amadeus-postgres/: Cargo.toml  README.md
amadeus-postgres/src/: impls.rs  lib.rs
amadeus-serde/: Cargo.toml  README.md
amadeus-serde/src/: build.rs  csv.rs  impls.rs  json.rs  lib.rs
amadeus-streaming/: Cargo.toml  README.md  azure-pipelines.yml  build.rs
amadeus-streaming/src/: count_min.rs  distinct.rs  lib.rs  linked_list.rs  ordered_linked_list.rs  proto_util.rs  sample.rs  sort.rs  top.rs  traits.rs
amadeus-streaming/src/distinct/: consts.rs
amadeus-types/: Cargo.toml  README.md
amadeus-types/src/: array.rs  data.rs  decimal.rs  group.rs  http.rs  lib.rs  list.rs  map.rs  ord.rs  time.rs  util.rs  value.rs  value_required.rs
amadeus_derive/: Cargo.toml  README.md
amadeus_derive/src/: lib.rs
benches/: benchmark.rs  codec.rs  common.rs  csv.rs  decoding.rs  encoding.rs  in_memory.rs  parquet.rs  reader.rs
examples/: cloudfront_logs.rs  columnar.rs  common_crawl.rs  commoncrawl.rs  commoncrawl_dist.rs
parquet-derive/: Cargo.toml
parquet-derive/src/: lib.rs
src/: barrier.rs  basic.rs  compression.rs  count_min.rs  data.rs  data_type.rs  dist_iter.rs  distinct.rs  distributed_iterator.rs  errors.rs  fast_approx.rs  into_dist_iter.rs  lib.rs  linked_list.rs  most_frequent.rs  no_pool.rs  nodes.rs  nom_parser.rs  numerics.rs  optim.rs  ordered_linked_list.rs  pool.rs  process_pool.rs  sample.rs  (+4 more)
(+139 files in other folders)
