[workspace]

[package]
name = "amadeus"
version = "0.4.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["constellation", "distributed", "data-science", "data", "logs"]
description = """
Harmonious distributed data processing & analysis in Rust.

parquet postgres aws s3 cloudfront elb json csv logs hadoop hdfs arrow common crawl
"""
repository = "https://github.com/constellation-rs/amadeus"
homepage = "https://github.com/constellation-rs/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[features]
constellation = ["bincode", "constellation-rs", "serde_traitobject"]
aws = ["amadeus-aws"]
commoncrawl = ["amadeus-commoncrawl"]
parquet = ["amadeus-parquet", "amadeus-derive/parquet", "amadeus-serde", "amadeus-derive/serde"]
postgres = ["amadeus-postgres", "amadeus-derive/postgres"]
csv = ["amadeus-serde", "amadeus-derive/serde"]
json = ["amadeus-serde", "amadeus-derive/serde"]
bench = ["serde-csv", "once_cell", "arrow-parquet", "rayon"]

[package.metadata.docs.rs]
features = ["constellation", "aws", "commoncrawl", "parquet", "postgres", "csv", "json"]

[dependencies]
amadeus-core = { version = "=0.4.2", path = "amadeus-core" }
amadeus-derive = { version = "=0.4.2", path = "amadeus-derive" }
amadeus-types = { version = "=0.4.2", path = "amadeus-types" }
amadeus-aws = { version = "=0.4.2", path = "amadeus-aws", optional = true }
amadeus-commoncrawl = { version = "=0.4.2", path = "amadeus-commoncrawl", optional = true }
amadeus-parquet = { version = "=0.4.2", path = "amadeus-parquet", optional = true }
amadeus-postgres = { version = "=0.4.2", path = "amadeus-postgres", optional = true }
amadeus-serde = { version = "=0.4.2", path = "amadeus-serde", optional = true }
amadeus-streaming = { version = "=0.4.2", path = "amadeus-streaming" }
async-channel = "1.1"
bincode = { version = "1.3", optional = true }
constellation-rs = { version = "0.2.0-alpha.2", default-features = false, optional = true }
derive-new = "0.5"
event-listener = "2.3.3"
futures = "0.3"
num_cpus = "1.13"
pin-project = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3"
serde_traitobject = { version = "0.2", optional = true }
tokio = { version = "0.2", features = ["rt-threaded", "rt-util", "blocking"] }

# Move to dev-dependencies once fixed: https://github.com/rust-lang/cargo/issues/1596
arrow-parquet = { package = "parquet", version = "1.0", default-features = false, features = ["brotli", "flate2", "lz4", "snap"], optional = true }
once_cell = { version = "1.4", optional = true }
rayon = { version = "1.3", optional = true }
serde-csv = { package = "csv", version = "1.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "Performance", "Response", "Window"] }

[dev-dependencies]
doc-comment = "0.3"
either = { version = "1.5", features = ["serde"] }
rand = "0.7"
serde_json = "1.0"
tokio = { version = "0.2", features = ["macros", "time"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[build-dependencies]
rustversion = "1.0"

[profile.bench]
codegen-units = 1
debug = 2
incremental = false
lto = true
# panic = "abort" # this is disallowed by cargo currently

[[example]]
name = "cloudfront_logs"
required-features = ["aws"]

[[example]]
name = "columnar"
required-features = ["aws"]

[[example]]
name = "commoncrawl"
required-features = ["commoncrawl"]

[[example]]
name = "commoncrawl_dist"
required-features = ["commoncrawl", "constellation"]

[[test]]
name = "into_par_stream_dist"
harness = false

[[test]]
name = "panic_dist"
harness = false

[[test]]
name = "threads_dist"
harness = false

[[test]]
name = "cloudfront"
required-features = ["aws"]

[[test]]
name = "cloudfront_dist"
harness = false
required-features = ["aws"]

[[test]]
name = "commoncrawl"
required-features = ["commoncrawl"]

[[test]]
name = "commoncrawl_dist"
harness = false
required-features = ["commoncrawl"]

[[test]]
name = "parquet"
required-features = ["parquet"]

[[test]]
name = "parquet_dist"
harness = false
required-features = ["parquet"]

[[test]]
name = "parquet_wasm"
required-features = ["parquet"]

[[test]]
name = "csv"
required-features = ["csv"]

[[test]]
name = "csv_dist"
harness = false
required-features = ["csv"]

[[test]]
name = "csv_wasm"
required-features = ["csv"]

[[test]]
name = "json"
required-features = ["json"]

[[test]]
name = "json_dist"
harness = false
required-features = ["json"]

[[test]]
name = "postgres"
required-features = ["postgres"]
test = false # TODO set up postgres on CI

[[test]]
name = "postgres_dist"
harness = false
required-features = ["postgres"]
test = false # TODO set up postgres on CI

[[bench]]
name = "csv"
required-features = ["bench", "csv"]

[[bench]]
name = "in_memory"
required-features = ["bench"]

[[bench]]
name = "parquet"
required-features = ["bench", "parquet"]
