[package]
name = "amadeus-aws"
version = "0.1.6"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "aws", "s3", "logs"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus/0.1.6"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[features]
doc = []

[package.metadata.docs.rs]
features = ["doc"]

[dependencies]
amadeus-core = { version = "=0.1.6", path = "../amadeus-core" }
amadeus-types = { version = "=0.1.6", path = "../amadeus-types" }
chrono = { version = "0.4", default-features = false }
flate2 = "1.0"
futures-01 = { package = "futures", version = "0.1" }
futures = { version = "0.3", features = ["compat"] }
http = "0.2"
once_cell = "1.0"
rusoto_core = "0.42"
rusoto_s3 = "0.42"
serde_closure = "0.2"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.2.12"
tokio-retry = "0.2"
url = { version = "2.1", features = ["serde"] }

# dependency of rusoto_core/hyper-tls/native-tls; ensure it's vendored to simplify cross-compilation
openssl = { version = "0.10", features = ["vendored"] }
