[package]
name = "amadeus-aws"
version = "0.3.5"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "aws", "s3", "logs"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "=0.3.5", path = "../amadeus-core" }
amadeus-types = { version = "=0.3.5", path = "../amadeus-types" }
async-compression = { version = "0.3.3", features = ["gzip", "futures-bufread"] }
async-trait = "0.1"
chrono = { version = "0.4", default-features = false }
futures = { version = "0.3" }
futures-retry = "0.5"
http = "0.2"
once_cell = "1.0"
rusoto_core = "0.45"
rusoto_credential = "0.44"
rusoto_s3 = "0.44"
serde_closure = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = "0.2"
url = { version = "2.1", features = ["serde"] }
recycle = "0.1"

# dependency of rusoto_core/hyper-tls/native-tls; ensure it's vendored to simplify cross-compilation
[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[build-dependencies]
rustversion = "1.0"
