[package]
name = "amadeus-commoncrawl"
version = "0.1.1"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "commoncrawl", "web", "crawl"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus/0.1.1"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "0.1", path = "../amadeus-core" }
flate2 = "1.0"
reqwest = "0.9"
reqwest_resume = "0.2"
warc_parser = { git = "https://github.com/alecmocatta/warc_nom_parser" }
serde_closure = "0.1"
serde = { version = "1.0", features = ["derive"] }
