[package]
name = "amadeus-commoncrawl"
version = "0.1.2"
license = "MIT OR Apache-2.0"
authors = ["Stephen Becker IV <github@deathbyescalator.com>", "Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "commoncrawl", "web", "crawl"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus/0.1.2"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[features]
doc = []

[dependencies]
amadeus-core = { version = "=0.1.2", path = "../amadeus-core" }
amadeus-types = { version = "=0.1.2", path = "../amadeus-types" }
flate2 = "1.0"
reqwest = "0.9"
reqwest_resume = "0.2"
nom = "4.2.3"
serde_closure = "0.2"
serde = { version = "1.0", features = ["derive"] }
url = { version = "2.1", features = ["serde"] }

# dependency of reqwest/native-tls; ensure it's vendored to simplify cross-compilation
openssl = { version = "0.10", features = ["vendored"] }
