[package]
name = "amadeus-core"
version = "0.4.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "distributed", "data-science", "data", "logs"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/constellation-rs/amadeus"
homepage = "https://github.com/constellation-rs/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-streaming = { version = "=0.4.2", path = "../amadeus-streaming" }
async-trait = "0.1"
derive-new = "0.5"
educe = "0.4"
either = { version = "1.5", features = ["serde"] }
futures = "0.3"
indexmap = { version = "1.5", features = ["serde-1"] }
itertools = "0.9"
multimap = "0.8"
owned_chars = "0.3"
pin-project = "0.4"
rand = "0.7"
replace_with = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3"
sum = { version = "0.1.7", default-features = false, features = ["futures", "serde", "0", "1", "2", "3", "4", "5", "6", "7", "8"]  }
tokio = { version = "1.5", features = ["blocking", "rt-core"] }
walkdir = "2.2"
widestring = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Blob", "Response", "Window"] }

[build-dependencies]
rustversion = "1.0"
