[package]
name = "amadeus-derive"
version = "0.1.0"
license = "Apache-2.0"
description = "Derive Macro TODO"
homepage = "https://github.com/alecmocatta/amadeus"
repository = "https://github.com/alecmocatta/amadeus"
authors = ["..."]
keywords = [ "arrow", "parquet", "hadoop" ]
readme = "README.md"
edition = "2018"

[lib]
proc-macro = true

[features]
parquet = []

[dependencies]
proc-macro2 = { version = "1.0.1", default-features = false }
quote = { version = "1.0.2", default-features = false }
syn = { version = "1.0.5", default-features = false, features = ["derive", "clone-impls", "parsing", "printing", "proc-macro"] }
