[package]
name = "amadeus-derive"
version = "0.1.5"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "distributed", "data-science", "data", "logs"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus/0.1.5"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[features]
parquet = []
postgres = []
serde = []

[dependencies]
proc-macro2 = { version = "1.0.1", default-features = false }
quote = { version = "1.0.2", default-features = false }
syn = { version = "1.0.5", default-features = false, features = ["derive", "clone-impls", "parsing", "printing", "proc-macro"] }
