[package]
name = "amadeus-ml"
version = "0.4.1"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>", "Maciej Kula <maciej.kula@gmail.com>"]
categories = ["data-structures", "algorithms", "science"]
keywords = ["streaming-algorithm", "probabilistic", "sketch", "data-structure", "hyperloglog"]
description = """
A low-overhead, define-by-run autodifferentiation library.
"""
repository = "https://github.com/constellation-rs/amadeus"
homepage = "https://github.com/constellation-rs/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[features]
fast-math = []
openblas = ["ndarray/blas", "blas-src/openblas", "openblas-src/static"]

[dependencies]
approx = "0.3"
blas-src = { version = "0.2", optional = true }
hibitset = "0.6"
itertools = "0.9"
ndarray = { version = "0.13", features = ["approx", "serde"] }
openblas-src = { version = "0.6", default-features = false, optional = true }
rand = { version = "0.7", features = ["serde1"] }
rand_distr = "0.2"
serde = { version = "1", features = ["derive", "rc"] }
smallvec = { version = "1.4", features = ["serde"] }

[build-dependencies]
rustversion = "1.0"

[dev-dependencies]
criterion = "0.3"
rayon = "1.3"

[[bench]]
name = "benchmark"
harness = false
