[package]
name = "amadeus-parquet-derive"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Apache Arrow <dev@arrow.apache.org>", "Alec Mocatta <alec@mocatta.net>"]
categories = []
keywords = ["arrow", "parquet", "hadoop"]
description = """
Apache Parquet Derive Macro implementation.
"""
repository = "https://github.com/alecmocatta/amadeus-parquet"
homepage = "https://github.com/alecmocatta/amadeus-parquet"
documentation = "https://docs.rs/amadeus-parquet-derive/0.1.0"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus-parquet", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4", default-features = false }
quote = { version = "0.6", default-features = false }
syn = { version = "0.15", default-features = false, features = ["derive", "clone-impls", "parsing", "printing", "proc-macro"] }
