[package]
name = "amadeus-parquet"
version = "0.1.0"
license = "Apache-2.0"
description = "Derive Macro TODO"
homepage = "https://github.com/alecmocatta/amadeus"
repository = "https://github.com/alecmocatta/amadeus"
authors = ["..."]
keywords = [ "arrow", "parquet", "hadoop" ]
readme = "README.md"
edition = "2018"

[dependencies]
amadeus-core = { version = "0.1", path = "../amadeus-core" }
amadeus-types = { version = "0.1", path = "../amadeus-types" }
parchet = { version = "0.1", git = "https://github.com/alecmocatta/parchet", branch = "initial" }
walkdir = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_closure = { version = "0.1" } #, path = "../serde_closure" }
sum = { version = "0.1", features = ["serde"] }
