[package]
name = "amadeus-parquet"
version = "0.1.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>", "Apache Arrow <dev@arrow.apache.org>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "parquet", "arrow", "hadoop"]
description = """
An Apache Parquet implementation in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus/0.1.2"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "=0.1.2", path = "../amadeus-core" }
amadeus-types = { version = "=0.1.2", path = "../amadeus-types" }
brotli = "3.3"
byteorder = "1.2"
chrono = "0.4"
flate2 = { version = "1.0.2", features = ["rust_backend"], default-features = false }
fxhash = "0.2"
linked-hash-map = "0.5"
lz4 = "1.23"
num-bigint = "0.2"
parquet-format = "2.6.0"
quick-error = "1.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.2"
snap = "0.2"
sum = "0.1"
thrift = "0.12.0"
zstd = "0.4"

[dev-dependencies]
rand = "0.7"

[[test]]
name = "derive"
test = false
