[package]
name = "amadeus-parquet"
version = "0.4.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>", "Apache Arrow <dev@arrow.apache.org>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "parquet", "arrow", "hadoop"]
description = """
An Apache Parquet implementation in Rust.
"""
repository = "https://github.com/constellation-rs/amadeus"
homepage = "https://github.com/constellation-rs/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "=0.4.2", path = "../amadeus-core" }
amadeus-types = { version = "=0.4.2", path = "../amadeus-types" }
async-trait = "0.1"
brotli = "3.3"
byteorder = "1.2"
chrono = { version = "0.4", default-features = false }
educe = "0.4"
flate2 = { version = "1.0.2", features = ["rust_backend"], default-features = false }
futures = "0.3"
fxhash = "0.2"
hashlink = "0.5"
lz-fear = "0.1"
num-bigint = "0.3"
quick-error = "2.0.0"
rustversion = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3"
snap = "1.0"
sum = { version = "0.1.7", default-features = false, features = ["2", "3"]  }
thrift = "0.13"
zstd = { version = "0.5", features = ["wasm"] }

[dev-dependencies]
rand = "0.7"

[build-dependencies]
rustversion = "1.0"

[[test]]
name = "derive"
test = false
