[package]
name = "amadeus-postgres"
version = "0.3.6"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "postgres", "postgresql", "sql"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests", build = "26" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "=0.3.6", path = "../amadeus-core" }
amadeus-types = { version = "=0.3.6", path = "../amadeus-types" }
bytes = "0.5"
chrono = { version = "0.4", default-features = false }
educe = "0.4"
futures = "0.3"
pin-project = "0.4"
postgres = { package = "tokio-postgres", version = "0.5", features = ["with-chrono-0_4"] }
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.3"
sum = "0.1"
tokio = "0.2"

[build-dependencies]
rustversion = "1.0"
