[package]
name = "amadeus-serde"
version = "0.1.2"
license = "Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["concurrency", "science", "database", "parser-implementations", "text-processing"]
keywords = ["amadeus", "data", "json", "csv", "parse"]
description = """
Harmonious distributed data analysis in Rust.
"""
repository = "https://github.com/alecmocatta/amadeus"
homepage = "https://github.com/alecmocatta/amadeus"
documentation = "https://docs.rs/amadeus/0.1.2"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/amadeus", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
amadeus-core = { version = "=0.1.2", path = "../amadeus-core" }
amadeus-types = { version = "=0.1.2", path = "../amadeus-types" }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.0"
linked-hash-map = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_closure = "0.1"
serde_json = "1.0"
sum = { version = "0.1", features = ["serde"] }
